	  and do_down_void(); changes to shortcut_init(), do_up(),
	  do_scroll_up(), do_down(), do_scroll_down(), do_left(), and
	  do_right(). (DLR)
	- Make Jordi's email address, and the description of what the
	  manual pages were written for, consistent in the
	  documentation.  Changes to AUTHORS, nano.1, nanorc.5, and
	  rnano.1. (DLR, based on suggestions by Jordi)
- browser.c:
  do_browser()
	- Refactor the mouse support, modeling it after do_mouse() for
	  consistency. (DLR)
	- Remove unneeded call to blank_edit(). (DLR)
	- After entering "..", select the directory we were in before
	  instead of the first filename in the list, as Pico does. (DLR)
	- Simplify screen update handling and exiting. (DLR)
  do_browse_from()
	- During the operating directory check, if path isn't NULL,
	  don't bother freeing it before mallocstrcpy()ing operating_dir
	  into it, as the latter operation will free it. (DLR)
	- Don't bother freeing path if it's NULL. (DLR)
  browser_init()
	- Fix off-by-one error when calculating longest that kept the
	  rightmost column of the screen from being used. (DLR)
	- Calculate width here instead of in browser_refresh(), as it's
	  more consistent. (DLR)
	- If filelist is initialized, free it here instead of in several
	  places in do_browser(). (DLR)
  browser_refresh()
	- Simplify. (DLR)
	- Fix problems where translated versions of "(dir)" could be
	  truncated, and where file sizes could be too long. (DLR)
	- For the ".." entry, display "(parent dir)" instead of "(dir)",
	  as Pico does. (DLR)
	- If a filename is too long, truncate it and display an ellipsis
	  before it, as titlebar() does. (DLR)
	- Add translator comments explaining the maximum intended
	  lengths of "(dir)" and "(parent dir)". (DLR)
	- Fix problem where width wouldn't be properly initialized if
	  the file list took up one line or less. (DLR)
	- Don't display overly long filenames with ellipses if the
	  number of columns is extremely small. (DLR)